raylib.jai

CheckCollisionRayBox :: (ray: Ray, box: BoundingBox) -> bool #foreign raylib_native "CheckCollisionRayBox";
GetCollisionRayModel :: (ray: Ray, model: Model) -> RayHitInfo #foreign raylib_native "GetCollisionRayModel";
GetCollisionRayTriangle :: (ray: Ray, p1: Vector3, p2: Vector3, p3: Vector3) -> RayHitInfo #foreign raylib_native "GetCollisionRayTriangle";
GetCollisionRayGround :: (ray: Ray, groundHeight: float) -> RayHitInfo #foreign raylib_native "GetCollisionRayGround";
LoadShader :: (vsFileName: *u8, fsFileName: *u8) -> Shader #foreign raylib_native "LoadShader";
LoadShaderCode :: (vsCode: *u8, fsCode: *u8) -> Shader #foreign raylib_native "LoadShaderCode";
UnloadShader :: (shader: Shader)  #foreign raylib_native "UnloadShader";
GetShaderDefault :: () -> Shader #foreign raylib_native "GetShaderDefault";
GetTextureDefault :: () -> Texture2D #foreign raylib_native "GetTextureDefault";
GetShapesTexture :: () -> Texture2D #foreign raylib_native "GetShapesTexture";
GetShapesTextureRec :: () -> Rectangle #foreign raylib_native "GetShapesTextureRec";
SetShapesTexture :: (texture: Texture2D, source: Rectangle)  #foreign raylib_native "SetShapesTexture";
GetShaderLocation :: (shader: Shader, uniformName: *u8) -> s32 #foreign raylib_native "GetShaderLocation";
SetShaderValue :: (shader: Shader, uniformLoc: s32, value: *void, uniformType: ShaderUniformDataType) #foreign raylib_native "SetShaderValue";
SetShaderValueV :: (shader: Shader, uniformLoc: s32, value: *void, uniformType: ShaderUniformDataType, count: s32) #foreign raylib_native "SetShaderValueV";
SetShaderValueMatrix :: (shader: Shader, uniformLoc: s32, mat: Matrix)  #foreign raylib_native "SetShaderValueMatrix";
SetShaderValueTexture :: (shader: Shader, uniformLoc: s32, texture: Texture2D)  #foreign raylib_native "SetShaderValueTexture";
SetMatrixProjection :: (proj: Matrix)  #foreign raylib_native "SetMatrixProjection";
SetMatrixModelview :: (view: Matrix)  #foreign raylib_native "SetMatrixModelview";
GetMatrixModelview :: () -> Matrix #foreign raylib_native "GetMatrixModelview";
GetMatrixProjection :: () -> Matrix #foreign raylib_native "GetMatrixProjection";
GenTextureCubemap :: (shader: Shader, map: Texture2D, size: s32) -> Texture2D #foreign raylib_native "GenTextureCubemap";
GenTextureIrradiance :: (shader: Shader, cubemap: Texture2D, size: s32) -> Texture2D #foreign raylib_native "GenTextureIrradiance";
GenTexturePrefilter :: (shader: Shader, cubemap: Texture2D, size: s32) -> Texture2D #foreign raylib_native "GenTexturePrefilter";
GenTextureBRDF :: (shader: Shader, size: s32) -> Texture2D #foreign raylib_native "GenTextureBRDF";
BeginShaderMode :: (shader: Shader)  #foreign raylib_native "BeginShaderMode";
EndShaderMode :: ()  #foreign raylib_native "EndShaderMode";
BeginBlendMode :: (mode: s32)  #foreign raylib_native "BeginBlendMode";
EndBlendMode :: ()  #foreign raylib_native "EndBlendMode";
InitVrSimulator :: ()  #foreign raylib_native "InitVrSimulator";
CloseVrSimulator :: ()  #foreign raylib_native "CloseVrSimulator";
UpdateVrTracking :: (camera: *Camera)  #foreign raylib_native "UpdateVrTracking";
SetVrConfiguration :: (info: VrDeviceInfo, distortion: Shader)  #foreign raylib_native "SetVrConfiguration";
IsVrSimulatorReady :: () -> bool #foreign raylib_native "IsVrSimulatorReady";
ToggleVrMode :: ()  #foreign raylib_native "ToggleVrMode";
BeginVrDrawing :: ()  #foreign raylib_native "BeginVrDrawing";
EndVrDrawing :: ()  #foreign raylib_native "EndVrDrawing";
InitAudioDevice :: ()  #foreign raylib_native "InitAudioDevice";
CloseAudioDevice :: ()  #foreign raylib_native "CloseAudioDevice";
IsAudioDeviceReady :: () -> bool #foreign raylib_native "IsAudioDeviceReady";
SetMasterVolume :: (volume: float)  #foreign raylib_native "SetMasterVolume";
LoadWave :: (fileName: *u8) -> Wave #foreign raylib_native "LoadWave";
LoadSound :: (fileName: *u8) -> Sound #foreign raylib_native "LoadSound";
LoadSoundFromWave :: (wave: Wave) -> Sound #foreign raylib_native "LoadSoundFromWave";
UpdateSound :: (sound: Sound, data: *void, samplesCount: s32)  #foreign raylib_native "UpdateSound";
UnloadWave :: (wave: Wave)  #foreign raylib_native "UnloadWave";
UnloadSound :: (sound: Sound)  #foreign raylib_native "UnloadSound";
ExportWave :: (wave: Wave, fileName: *u8)  #foreign raylib_native "ExportWave";
ExportWaveAsCode :: (wave: Wave, fileName: *u8)  #foreign raylib_native "ExportWaveAsCode";
PlaySound :: (sound: Sound)  #foreign raylib_native "PlaySound";
StopSound :: (sound: Sound)  #foreign raylib_native "StopSound";
PauseSound :: (sound: Sound)  #foreign raylib_native "PauseSound";
ResumeSound :: (sound: Sound)  #foreign raylib_native "ResumeSound";
PlaySoundMulti :: (sound: Sound)  #foreign raylib_native "PlaySoundMulti";
StopSoundMulti :: ()  #foreign raylib_native "StopSoundMulti";
GetSoundsPlaying :: () -> s32 #foreign raylib_native "GetSoundsPlaying";
IsSoundPlaying :: (sound: Sound) -> bool #foreign raylib_native "IsSoundPlaying";
SetSoundVolume :: (sound: Sound, volume: float)  #foreign raylib_native "SetSoundVolume";
SetSoundPitch :: (sound: Sound, pitch: float)  #foreign raylib_native "SetSoundPitch";
WaveFormat :: (wave: *Wave, sampleRate: s32, sampleSize: s32, channels: s32)  #foreign raylib_native "WaveFormat";
WaveCopy :: (wave: Wave) -> Wave #foreign raylib_native "WaveCopy";
WaveCrop :: (wave: *Wave, initSample: s32, finalSample: s32)  #foreign raylib_native "WaveCrop";
GetWaveData :: (wave: Wave) -> *float #foreign raylib_native "GetWaveData";
LoadMusicStream :: (fileName: *u8) -> Music #foreign raylib_native "LoadMusicStream";
UnloadMusicStream :: (music: Music)  #foreign raylib_native "UnloadMusicStream";
PlayMusicStream :: (music: Music)  #foreign raylib_native "PlayMusicStream";
UpdateMusicStream :: (music: Music)  #foreign raylib_native "UpdateMusicStream";
StopMusicStream :: (music: Music)  #foreign raylib_native "StopMusicStream";
PauseMusicStream :: (music: Music)  #foreign raylib_native "PauseMusicStream";
ResumeMusicStream :: (music: Music)  #foreign raylib_native "ResumeMusicStream";
IsMusicPlaying :: (music: Music) -> bool #foreign raylib_native "IsMusicPlaying";
SetMusicVolume :: (music: Music, volume: float)  #foreign raylib_native "SetMusicVolume";
SetMusicPitch :: (music: Music, pitch: float)  #foreign raylib_native "SetMusicPitch";
SetMusicLoopCount :: (music: Music, count: s32)  #foreign raylib_native "SetMusicLoopCount";
GetMusicTimeLength :: (music: Music) -> float #foreign raylib_native "GetMusicTimeLength";
GetMusicTimePlayed :: (music: Music) -> float #foreign raylib_native "GetMusicTimePlayed";
InitAudioStream :: (sampleRate: u32, sampleSize: u32, channels: u32) -> AudioStream #foreign raylib_native "InitAudioStream";
UpdateAudioStream :: (stream: AudioStream, data: *void, samplesCount: s32)  #foreign raylib_native "UpdateAudioStream";
CloseAudioStream :: (stream: AudioStream)  #foreign raylib_native "CloseAudioStream";
IsAudioStreamProcessed :: (stream: AudioStream) -> bool #foreign raylib_native "IsAudioStreamProcessed";
PlayAudioStream :: (stream: AudioStream)  #foreign raylib_native "PlayAudioStream";
PauseAudioStream :: (stream: AudioStream)  #foreign raylib_native "PauseAudioStream";
ResumeAudioStream :: (stream: AudioStream)  #foreign raylib_native "ResumeAudioStream";
IsAudioStreamPlaying :: (stream: AudioStream) -> bool #foreign raylib_native "IsAudioStreamPlaying";
StopAudioStream :: (stream: AudioStream)  #foreign raylib_native "StopAudioStream";
SetAudioStreamVolume :: (stream: AudioStream, volume: float)  #foreign raylib_native "SetAudioStreamVolume";
SetAudioStreamPitch :: (stream: AudioStream, pitch: float)  #foreign raylib_native "SetAudioStreamPitch";
SetAudioStreamBufferSizeDefault :: (size: s32)  #foreign raylib_native "SetAudioStreamBufferSizeDefault";


make_Rectangle :: (x: $A, y: $B, width: $C, height: $D) -> Rectangle {
    r: Rectangle;
    r.x      = cast(float)x;
    r.y      = cast(float)y;
    r.width  = cast(float)width;
    r.height = cast(float)height;
    return r;
}

make_Color :: (r: $A, g: $B, b: $C, a: $D) -> Color {
    color: Color;
    color.r = cast(u8)r;
    color.g = cast(u8)g;
    color.b = cast(u8)b;
    color.a = cast(u8)a;
    return color;
}

make_Vector3 :: (x: $A, y: $B, z: $C) -> Vector3 {
    v: Vector3;
    v.x = cast(float)x;
    v.y = cast(float)y;
    v.z = cast(float)z;
    return v;
}

make_Vector2 :: (x: $A, y: $B) -> Vector2 {
    v: Vector2;
    v.x = cast(float)x;
    v.y = cast(float)y;
    return v;
}



#scope_file // ---------------

#if OS == .WINDOWS {
    #foreign_system_library "user32";
    #foreign_system_library "gdi32";
    #foreign_system_library "shell32";
    #foreign_system_library "winmm";
    raylib_native :: #foreign_library,no_dll "raylib/lib/raylib";
}
